# Gallegarmy-Telegram-Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  admins.txt  cerveza.py  compose.pro.yml  compose.yml  coruna.txt  dinner.py  fiestas.py  gallegarmy.db  help.py  help.txt  helpadmin.txt  init.sql  karma.py  main.py  menu.json  newmembers.py  pina.py  pinacolada.txt  prueba.py  pyproject.toml  requirements.txt  sqlite.db  start.py  state.py  status.py  test_events.py  vigo.txt
.docker/: Dockerfile
.docker/mysql/: Dockerfile
.docker/telegram_bot/: Dockerfile
.github/workflows/: main.yml  tests.yml
src/: cerveza.py  dinner.py  karma.py  main.py  newmembers.py  pina.py  start.py  status.py
sysarmy_bot/: .env.example  .env.test.example  Justfile  main.py
sysarmy_bot/config/: __init__.py
sysarmy_bot/core/: message.py
sysarmy_bot/dependency_injection/: __init__.py  bot_di.py  common.py  help_di.py
sysarmy_bot/shared/: message_bus.py  message_sender.py  telegram_utils.py
sysarmy_bot/test/: conftest.py
telegram_bot/: callout.py  cerveza.py  dinner.py  fiestas.py  help.py  karma.py  newmembers.py  pina.py  prueba.py  quote.py  start.py  status.py  steam.py
telegram_bot/db/: db_handler.py  karma_facade.py
telegram_bot/events/: check_coruna_event.py  check_events_city.py  event_text.py  events_handler.py  get_events.py
telegram_bot/karma/: karma_handler.py  modify_karma.py
telegram_bot/quote/: add_quote_handler.py  (+1 more)
tests/: my_account.session  test_check_events.py  test_dinner.py  test_event_text.py  test_get_events.py  test_karma_facade.py  test_messaging.py  test_user1.session
(+15 files in other folders)
